<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Contact List</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_contact">Contact</string>
    <string name="firststr">First Name</string>
    <string name="surstr">Surname</string>
    <string name="addrl1str">Address Line 1</string>
    <string name="numstr">Phone Number</string>
    <string name="citystr">City</string>
    <string name="codestr">Post Code</string>
    <string name="email">E-mail Address</string>
    <string name="savestr">Save</string>
    <string name="addcontact">Add Contact</string>

</resources>
